added team member 1

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
         <div class="card-grid">
           <div class="card team-card">
             <div class="team-avatar">AI</div>
-            <h3>Jamoa A'zosi 1</h3>
+            <h3>Asliddin GOYIBNAZAROV</h3>
             <p style="color:var(--green-neon)">AI/ML Engineer</p>
             <p class="sub">Python, TensorFlow, Data Science</p>
           </div>
