--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
 
         <div class="flex center" style="margin-top:28px;gap:14px;flex-wrap:wrap;">
           <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
-            <a href="#problem" style="color:var(--text-muted); text-decoration:none;">Boshlash</a>
+            <a href="#problem" style="color:var(--text-muted); text-decoration:none;">Batafsil</a>
           </button>
         </div>
       </section>
