--- a/index.html
+++ b/index.html
@@ -666,6 +666,9 @@
           <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
             <a href="#problem" style="color:var(--text-muted); text-decoration:none;">Batafsil</a>
           </button>
+          <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
+            <a href="/demo.html" style="color:var(--text-muted); text-decoration:none;">Demoni Ko'rish</a>
+          </button>
         </div>
       </section>
       <!-- End Hero Section -->
