--- a/demo.html
+++ b/demo.html
@@ -438,7 +438,7 @@ body.chat-lock {
             <div class="chip">🎥 Demo video</div>
             <video controls>
               <!-- SHU YERGA O'Z VIDEO MANZILINGIZNI QO'YASIZ -->
-              masalan: <source src="video.mp4" type="video/mp4" />
+              masalan: <source src="mobile-app.mp4" type="video/mp4" />
               Sizning brauzeringiz video tagini qo‘llab-quvvatlamaydi.
             </video>
           </div>
